# overcooked

./: README.md  __init__.py  main.py  pyproject.toml
overcooked/: __init__.py  collab.py  main.py
overcooked/delegation_planner/: bayesian_delegator.py
overcooked/envs/: overcooked_environment.py
overcooked/utils/: agent.py  core.py
